Format release content raw
