# _proto/swift/v2/tiller.swagger.json
@@ -4,14 +4,6 @@
     "application/json"
   ],
   "definitions": {
-    "HookDeletePolicy": {
-      "default": "SUCCEEDED",
-      "enum": [
-        "SUCCEEDED",
-        "FAILED"
-      ],
-      "type": "string"
-    },
     "HookEvent": {
       "default": "UNKNOWN",
       "enum": [
@@ -131,13 +123,6 @@
     "chartMetadata": {
       "description": "Metadata for a Chart file. This models the structure of a Chart.yaml file.\n\n\tSpec: https://k8s.io/helm/blob/master/docs/design/chart_format.md#the-chart-file",
       "properties": {
-        "annotations": {
-          "additionalProperties": {
-            "type": "string"
-          },
-          "description": "Annotations are additional mappings uninterpreted by Tiller,\nmade available for inspection by other applications.",
-          "type": "object"
-        },
         "apiVersion": {
           "description": "The API Version of this chart.",
           "type": "string"
@@ -274,13 +259,6 @@
     "releaseHook": {
       "description": "Hook defines a hook object.",
       "properties": {
-        "delete_policies": {
-          "items": {
-            "$ref": "#/definitions/HookDeletePolicy"
-          },
-          "title": "DeletePolicies are the policies that indicate when to delete the hook",
-          "type": "array"
-        },
         "events": {
           "description": "Events are the events that this hook fires on.",
           "items": {
@@ -469,6 +447,11 @@
     "v2GetReleaseContentRequest": {
       "description": "GetReleaseContentRequest is a request to get the contents of a release.",
       "properties": {
+        "format_raw": {
+          "format": "boolean",
+          "title": "Format release config and values to JSON string",
+          "type": "boolean"
+        },
         "name": {
           "title": "The name of the release",
           "type": "string"
@@ -972,6 +955,14 @@
             "name": "version",
             "required": false,
             "type": "integer"
+          },
+          {
+            "description": "Format release config and values to JSON string.",
+            "format": "boolean",
+            "in": "query",
+            "name": "format_raw",
+            "required": false,
+            "type": "boolean"
           }
         ],
         "responses": {
