# pkg/apis/swift/v2/tiller.schema.go
@@ -88,13 +88,6 @@ func init() {
     "chartMetadata": {
       "description": "Metadata for a Chart file. This models the structure of a Chart.yaml file.\n\n\tSpec: https://k8s.io/helm/blob/master/docs/design/chart_format.md#the-chart-file",
       "properties": {
-        "annotations": {
-          "additionalProperties": {
-            "type": "string"
-          },
-          "description": "Annotations are additional mappings uninterpreted by Tiller,\nmade available for inspection by other applications.",
-          "type": "object"
-        },
         "apiVersion": {
           "description": "The API Version of this chart.",
           "type": "string"
@@ -483,13 +476,6 @@ func init() {
     "chartMetadata": {
       "description": "Metadata for a Chart file. This models the structure of a Chart.yaml file.\n\n\tSpec: https://k8s.io/helm/blob/master/docs/design/chart_format.md#the-chart-file",
       "properties": {
-        "annotations": {
-          "additionalProperties": {
-            "type": "string"
-          },
-          "description": "Annotations are additional mappings uninterpreted by Tiller,\nmade available for inspection by other applications.",
-          "type": "object"
-        },
         "apiVersion": {
           "description": "The API Version of this chart.",
           "type": "string"
@@ -656,6 +642,10 @@ func init() {
   "$schema": "http://json-schema.org/draft-04/schema#",
   "description": "GetReleaseContentRequest is a request to get the contents of a release.",
   "properties": {
+    "format_raw": {
+      "title": "Format release config and values to JSON string",
+      "type": "boolean"
+    },
     "name": {
       "maxLength": 63,
       "pattern": "^[a-z0-9](?:[a-z0-9\\-]{0,61}[a-z0-9])?$",
